Fix button 'open task' not working on annotation ui page

--- a/docker-compose.ddln-prod.yml
+++ b/docker-compose.ddln-prod.yml
@@ -6,6 +6,9 @@ services:
   cvat:
     environment:
       CVAT_SHARE_URL: "Mounted from grey"
+      UI_SCHEME: https
+      UI_HOST: cvat.daedalean.ai
+      UI_PORT: 443
     volumes:
       - cvat_share:/home/django/share:ro
 volumes:
