--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
     environment:
       DJANGO_MODWSGI_EXTRA_ARGS: ""
       ALLOWED_HOSTS: '*'
+      PYTHONPATH: /home/django/cvat/exp-devtools/annotations/multi
     volumes:
       - cvat_data:/home/django/data
       - cvat_keys:/home/django/keys
