--- a/cvat-core/package.json
+++ b/cvat-core/package.json
@@ -39,6 +39,7 @@
     "jest-config": "^24.8.0",
     "js-cookie": "^2.2.0",
     "jsonpath": "^1.0.2",
+    "ml-matrix": "^6.5.3",
     "platform": "^1.3.5",
     "store": "^2.0.12"
   }
