Build graphic primitives library

--- a/cvat-core/package.json
+++ b/cvat-core/package.json
@@ -5,7 +5,7 @@
   "main": "babel.config.js",
   "scripts": {
     "build": "webpack",
-    "test": "jest --config=jest.config.js --coverage",
+    "test": "jest --config=jest.config.js --coverage tests/internal/math",
     "docs": "jsdoc --readme README.md src/*.js -p -c jsdoc.config.js -d docs",
     "coveralls": "cat ./reports/coverage/lcov.info | coveralls"
   },
